# z-os-a8

./: .gitignore  Cargo.toml
abstraction-layers/arch-traits/: Cargo.toml
abstraction-layers/arch-traits/src/: lib.rs
abstraction-layers/hardware-traits/: Cargo.toml
abstraction-layers/hardware-traits/src/: lib.rs
abstraction-layers/hardware-traits/src/display/: mod.rs  terminal.rs
arch/x86_64/: Cargo.toml
arch/x86_64/src/: lib.rs
boot-bios/: Cargo.toml
boot-bios/src/: event_loop.rs  gdt.rs  idt.rs  interrupts.rs  main.rs
boot-bios/src/devices/: keyboard.rs  mod.rs  timer.rs
builder/: Cargo.toml
builder/src/: args.rs  main.rs  os_builder.rs
hardware/ps2/: Cargo.toml
hardware/vga/: Cargo.toml
hardware/vga/src/: lib.rs
src/: allocators.rs  interrupts.rs  lib.rs
