[workspace]
members = [
    "abstraction-layers/arch-traits",
    "abstraction-layers/hardware-traits",
    "arch/x86_64",
    "hardware/ps2",
    "hardware/vga"
]

[package]
name = "z-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
z-hardware-traits = { path = "./abstraction-layers/hardware-traits" }
static-alloc = "0.2.3"
conquer-once = "0.3.2"
spin = "0.9.2"
