[package]
name = "boot-bios"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.5"

[dependencies]
rlibc = "1.0.0"
bootloader = "0.9.8"
spin = "0.9.2"
pic8259 = "0.10.2"
kernel = { path = ".." }
