[package]
name = "z-vga"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z-hardware-traits = { path = "../../abstraction-layers/hardware-traits", default-features = false, features = ["terminal-display"] }
conquer-once = "0.3.2"
spin = "0.9.2"
vga = "0.2.7"
